testsuite/tests/grammar/invalid_token_rule/test.out
== bad_token_casing.lkt ==
bad_token_casing.lkt:6:38: error: Unknown token: example
6 |     @main_rule main_rule <- Example(@example)
  |                                      ^^^^^^^


== unknown_token.lkt ==
unknown_token.lkt:6:38: error: Unknown token: NoSuchToken
6 |     @main_rule main_rule <- Example(@NoSuchToken)
  |                                      ^^^^^^^^^^^


lkt_compile: Done
